tryphon_macros/tests/ui/fail/both_env_and_config.rs
use tryphon::Config;

#[derive(Config)]
struct BadConfig {
    #[env("DB_HOST")]
    #[config]
    database: String,
}

fn main() {}
